@@ -88,6 +88,12 @@ Rails.application.routes.draw do
     end
   end
 
+  resources :sent_notifications, only: [], constraints: { id: /[0-9a-f]{32}/ } do
+    member do
+      get :unsubscribe
+    end
+  end
+
   # Spam reports
   resources :abuse_reports, only: [:new, :create]
 
