@@ -104,6 +104,14 @@ describe Notify do
     it { is_expected.to have_body_text /View Commit/ }
   end
 
+  shared_examples 'an unsubscribeable thread' do
+    it { is_expected.to have_body_text /unsubscribe/ }
+  end
+
+  shared_examples "a user can not unsubscribe through footer link" do
+    it { is_expected.not_to have_body_text /unsubscribe/ }
+  end
+
   describe 'for new users, the email' do
     let(:example_site_path) { root_path }
     let(:new_user) { create(:user, email: new_user_address, created_by_id: 1) }
@@ -115,6 +123,7 @@ describe Notify do
     it_behaves_like 'an email sent from GitLab'
     it_behaves_like 'a new user email', new_user_address
     it_behaves_like 'it should not have Gmail Actions links'
+    it_behaves_like 'a user can not unsubscribe through footer link'
 
     it 'contains the password text' do
       is_expected.to have_body_text /Click here to set your password/
@@ -134,7 +143,6 @@ describe Notify do
     end
   end
 
-
   describe 'for users that signed up, the email' do
     let(:example_site_path) { root_path }
     let(:new_user) { create(:user, email: new_user_address, password: "securePassword") }
@@ -144,6 +152,7 @@ describe Notify do
     it_behaves_like 'an email sent from GitLab'
     it_behaves_like 'a new user email', new_user_address
     it_behaves_like 'it should not have Gmail Actions links'
+    it_behaves_like 'a user can not unsubscribe through footer link'
 
     it 'should not contain the new user\'s password' do
       is_expected.not_to have_body_text /password/
@@ -157,6 +166,7 @@ describe Notify do
 
     it_behaves_like 'an email sent from GitLab'
     it_behaves_like 'it should not have Gmail Actions links'
+    it_behaves_like 'a user can not unsubscribe through footer link'
 
     it 'is sent to the new user' do
       is_expected.to deliver_to key.user.email
@@ -181,6 +191,7 @@ describe Notify do
     subject { Notify.new_email_email(email.id) }
 
     it_behaves_like 'it should not have Gmail Actions links'
+    it_behaves_like 'a user can not unsubscribe through footer link'
 
     it 'is sent to the new user' do
       is_expected.to deliver_to email.user.email
@@ -227,6 +238,7 @@ describe Notify do
           it_behaves_like 'an assignee email'
           it_behaves_like 'an email starting a new thread', 'issue'
           it_behaves_like 'it should show Gmail Actions View Issue link'
+          it_behaves_like 'an unsubscribeable thread'
 
           it 'has the correct subject' do
             is_expected.to have_subject /#{project.name} \| #{issue.title} \(##{issue.iid}\)/
@@ -253,6 +265,7 @@ describe Notify do
           it_behaves_like 'a multiple recipients email'
           it_behaves_like 'an answer to an existing thread', 'issue'
           it_behaves_like 'it should show Gmail Actions View Issue link'
+          it_behaves_like "an unsubscribeable thread"
 
           it 'is sent as the author' do
             sender = subject.header[:from].addrs[0]
@@ -283,6 +296,7 @@ describe Notify do
 
           it_behaves_like 'an answer to an existing thread', 'issue'
           it_behaves_like 'it should show Gmail Actions View Issue link'
+          it_behaves_like 'an unsubscribeable thread'
 
           it 'is sent as the author' do
             sender = subject.header[:from].addrs[0]
@@ -319,6 +333,7 @@ describe Notify do
           it_behaves_like 'an assignee email'
           it_behaves_like 'an email starting a new thread', 'merge_request'
           it_behaves_like 'it should show Gmail Actions View Merge request link'
+          it_behaves_like "an unsubscribeable thread"
 
           it 'has the correct subject' do
             is_expected.to have_subject /#{merge_request.title} \(##{merge_request.iid}\)/
@@ -345,6 +360,7 @@ describe Notify do
           subject { Notify.new_merge_request_email(merge_request_with_description.assignee_id, merge_request_with_description.id) }
 
           it_behaves_like 'it should show Gmail Actions View Merge request link'
+          it_behaves_like "an unsubscribeable thread"
 
           it 'contains the description' do
             is_expected.to have_body_text /#{merge_request_with_description.description}/
@@ -357,6 +373,7 @@ describe Notify do
           it_behaves_like 'a multiple recipients email'
           it_behaves_like 'an answer to an existing thread', 'merge_request'
           it_behaves_like 'it should show Gmail Actions View Merge request link'
+          it_behaves_like "an unsubscribeable thread"
 
           it 'is sent as the author' do
             sender = subject.header[:from].addrs[0]
@@ -387,6 +404,7 @@ describe Notify do
 
           it_behaves_like 'an answer to an existing thread', 'merge_request'
           it_behaves_like 'it should show Gmail Actions View Merge request link'
+          it_behaves_like "an unsubscribeable thread"
 
           it 'is sent as the author' do
             sender = subject.header[:from].addrs[0]
@@ -417,6 +435,7 @@ describe Notify do
           it_behaves_like 'a multiple recipients email'
           it_behaves_like 'an answer to an existing thread', 'merge_request'
           it_behaves_like 'it should show Gmail Actions View Merge request link'
+          it_behaves_like "an unsubscribeable thread"
 
           it 'is sent as the merge author' do
             sender = subject.header[:from].addrs[0]
@@ -446,6 +465,7 @@ describe Notify do
 
       it_behaves_like 'an email sent from GitLab'
       it_behaves_like 'it should not have Gmail Actions links'
+      it_behaves_like "a user can not unsubscribe through footer link"
 
       it 'has the correct subject' do
         is_expected.to have_subject /Project was moved/
@@ -468,6 +488,7 @@ describe Notify do
 
       it_behaves_like 'an email sent from GitLab'
       it_behaves_like 'it should not have Gmail Actions links'
+      it_behaves_like "a user can not unsubscribe through footer link"
 
       it 'has the correct subject' do
         is_expected.to have_subject /Access to project was granted/
@@ -518,6 +539,7 @@ describe Notify do
         it_behaves_like 'a note email'
         it_behaves_like 'an answer to an existing thread', 'commit'
         it_behaves_like 'it should show Gmail Actions View Commit link'
+        it_behaves_like "a user can not unsubscribe through footer link"
 
         it 'has the correct subject' do
           is_expected.to have_subject /#{commit.title} \(#{commit.short_id}\)/
@@ -538,6 +560,7 @@ describe Notify do
         it_behaves_like 'a note email'
         it_behaves_like 'an answer to an existing thread', 'merge_request'
         it_behaves_like 'it should show Gmail Actions View Merge request link'
+        it_behaves_like 'an unsubscribeable thread'
 
         it 'has the correct subject' do
           is_expected.to have_subject /#{merge_request.title} \(##{merge_request.iid}\)/
@@ -558,6 +581,7 @@ describe Notify do
         it_behaves_like 'a note email'
         it_behaves_like 'an answer to an existing thread', 'issue'
         it_behaves_like 'it should show Gmail Actions View Issue link'
+        it_behaves_like 'an unsubscribeable thread'
 
         it 'has the correct subject' do
           is_expected.to have_subject /#{issue.title} \(##{issue.iid}\)/
@@ -579,6 +603,7 @@ describe Notify do
 
     it_behaves_like 'an email sent from GitLab'
     it_behaves_like 'it should not have Gmail Actions links'
+    it_behaves_like "a user can not unsubscribe through footer link"
 
     it 'has the correct subject' do
       is_expected.to have_subject /Access to group was granted/
@@ -607,6 +632,7 @@ describe Notify do
     subject { ActionMailer::Base.deliveries.last }
 
     it_behaves_like 'an email sent from GitLab'
+    it_behaves_like "a user can not unsubscribe through footer link"
 
     it 'is sent to the new user' do
       is_expected.to deliver_to 'new-email@mail.com'
@@ -629,6 +655,7 @@ describe Notify do
     subject { Notify.repository_push_email(project.id, 'devs@company.name', author_id: user.id, ref: 'refs/heads/master', action: :create) }
 
     it_behaves_like 'it should not have Gmail Actions links'
+    it_behaves_like "a user can not unsubscribe through footer link"
 
     it 'is sent as the author' do
       sender = subject.header[:from].addrs[0]
@@ -657,6 +684,7 @@ describe Notify do
     subject { Notify.repository_push_email(project.id, 'devs@company.name', author_id: user.id, ref: 'refs/tags/v1.0', action: :create) }
 
     it_behaves_like 'it should not have Gmail Actions links'
+    it_behaves_like "a user can not unsubscribe through footer link"
 
     it 'is sent as the author' do
       sender = subject.header[:from].addrs[0]
@@ -684,6 +712,7 @@ describe Notify do
     subject { Notify.repository_push_email(project.id, 'devs@company.name', author_id: user.id, ref: 'refs/heads/master', action: :delete) }
 
     it_behaves_like 'it should not have Gmail Actions links'
+    it_behaves_like "a user can not unsubscribe through footer link"
 
     it 'is sent as the author' do
       sender = subject.header[:from].addrs[0]
@@ -707,6 +736,7 @@ describe Notify do
     subject { Notify.repository_push_email(project.id, 'devs@company.name', author_id: user.id, ref: 'refs/tags/v1.0', action: :delete) }
 
     it_behaves_like 'it should not have Gmail Actions links'
+    it_behaves_like "a user can not unsubscribe through footer link"
 
     it 'is sent as the author' do
       sender = subject.header[:from].addrs[0]
@@ -734,6 +764,7 @@ describe Notify do
     subject { Notify.repository_push_email(project.id, 'devs@company.name', author_id: user.id, ref: 'refs/heads/master', action: :push, compare: compare, reverse_compare: false, send_from_committer_email: send_from_committer_email) }
 
     it_behaves_like 'it should not have Gmail Actions links'
+    it_behaves_like "a user can not unsubscribe through footer link"
 
     it 'is sent as the author' do
       sender = subject.header[:from].addrs[0]
@@ -839,6 +870,7 @@ describe Notify do
     subject { Notify.repository_push_email(project.id, 'devs@company.name', author_id: user.id, ref: 'refs/heads/master', action: :push, compare: compare) }
 
     it_behaves_like 'it should show Gmail Actions View Commit link'
+    it_behaves_like "a user can not unsubscribe through footer link"
 
     it 'is sent as the author' do
       sender = subject.header[:from].addrs[0]
